<resources>
    <string name="app_name">fellowship</string>
    <string name="action_settings">Settings</string>

    <string name="no_initiatives_yet">You have no initiatives yet. </string>
    <string name="no_initiatives_find">Find one </string>
    <string name="or">or </string>
    <string name="no_initiatives_create">create one</string>

    <string name="title_of_initiative">Title of Initiative</string>
    <string name="title_instruction">Be Descriptive You Idiot</string>
    <string name="interval_prompt">How often will you check in?</string>
    <string name="create_initiative">Create Your Initiative!</string>

    <string name="startDate">Start Date</string>
    <string name="to">To</string>
    <string name="endDate">End Date</string>
    <string name="task_interval">Task Interval:</string>
    <string name="group_size">Group Size:</string>

    <string-array name="intervals_array">
        <item>Once a Week</item>
        <item>Twice a Week</item>
        <item>Once a Month</item>
        <item>Twice a Month</item>
    </string-array>

    <string name="open_group">Open Group</string>
    <string name="closed_group">Closed Group</string>

    <string name="submit_initiative">Submit Your Initiative</string>

    <string name="starts_in">Starts in</string>
    <string name="time_remaining">Time remaining</string>

    <string name="days">days</string>
    <string name="hours">hours</string>
    <string name="minutes">minutes</string>
    <string name="seconds">seconds</string>
    <string name="initiative_search">Search For Inititiative</string>

</resources>
