<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.teamawesome.fellowship.MainPageFeedFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <TextView
            android:id="@+id/no_initiatives_yet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_initiatives_yet"
            />
        <TextView
            android:id="@+id/no_initiatives_find"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/no_initiatives_find"
            />
        <TextView
            android:id="@+id/no_initiatives_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            />
        <TextView
            android:id="@+id/no_initiatives_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_initiatives_create"
            />
    </LinearLayout>
</ScrollView>
