<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <android.support.v7.widget.CardView
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_gravity="center"
            android:elevation="12dp"
            android:id="@+id/view2"
            app:cardCornerRadius="60dp"
            android:innerRadius="0dp"
            android:shape="ring"
            android:thicknessRatio="1.9">
            <ImageView
                android:layout_height="128dp"
                android:layout_width="match_parent"
                android:id="@+id/imageView1"
                android:src="@drawable/calm_daylight_evening_267967"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true">
            </ImageView>
        </android.support.v7.widget.CardView>
        <TextView
            android:id="@+id/initiative_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_vertical_margin"
            android:gravity="center"
            android:textSize="32sp" />
        <TextView
            android:id="@+id/initiative_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_vertical_margin"
            android:gravity="center"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/starts_in_or_time_remaining"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_vertical_margin"
            android:gravity="center"
            android:textSize="24sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_vertical_margin"
            android:gravity="center"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/default_horizontal_margin"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/days"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/default_horizontal_margin"
                    android:textSize="12sp"
                    android:text="@string/days"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/default_horizontal_margin"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/hours"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/default_horizontal_margin"
                    android:textSize="12sp"
                    android:text="@string/hours"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/default_horizontal_margin"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/minutes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/default_horizontal_margin"
                    android:textSize="12sp"
                    android:text="@string/minutes"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/default_horizontal_margin"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/seconds"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/default_horizontal_margin"
                    android:textSize="12sp"
                    android:text="@string/seconds"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>